[gd_scene load_steps=2 format=3 uid="uid://ch8gfxuo44r4v"]

[ext_resource type="Script" uid="uid://coq8ltvffdw66" path="res://hud/mainMenu.gd" id="1_w2n7d"]

[node name="mainMenu" type="CanvasLayer"]
script = ExtResource("1_w2n7d")

[node name="startButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -118.0
offset_right = 79.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="titleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Generic Twin Stick Shooter"

[node name="highScoreLabel" type="RichTextLabel" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -402.0
offset_bottom = 402.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 64
text = "Highscore
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0
?: 0"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="newScoreContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -236.0
offset_right = 305.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="scoreLabel" type="Label" parent="newScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Final Score: 10000000"

[node name="userName" type="LineEdit" parent="newScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
placeholder_text = "Player Name"

[node name="okButton" type="Button" parent="newScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "OK"

[node name="controlSelectLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -397.0
offset_right = 241.0
offset_bottom = -352.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Control Type:"

[node name="controlsSelect" type="OptionButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -344.0
offset_right = 248.0
offset_bottom = -291.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
selected = 0
item_count = 2
popup/item_0/text = "KB + Mouse"
popup/item_0/id = 0
popup/item_1/text = "Gamepad"
popup/item_1/id = 1

[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="newScoreContainer/okButton" to="." method="_on_score_ok_button_pressed"]
[connection signal="item_selected" from="controlsSelect" to="." method="_on_controls_select_item_selected"]
